Changelog
=========

Version 1.3.dev1

  * spell check support
  * fix window cache settings
  * fix SIGSEGV - gui threads conflict
  * min size of editor and preview when both widgets are visible

Version 1.2.0 - 26.10.2017 19:40

  * vim with working application menu
  * realy disabled accels for vim
  * toggle buttons to on/off editor and preview
  * tabs setting in status bar
  * preferences are save automatical
  * auto indent is switchable
  * showing line numbers is switchable
  * right margin is switchable
  * text wrapping is switchable

Version 1.1.0 - 03.08.2017 7:00

  * GTK Version check
  * add accels only for SourceView editor
  * export document as HTML
  * using WebKit2 engine
  * Python 2.x encoding fixies
  * links, images and media urls showen in popup bar
  * JSON preview
  * PEP writer fix
  * only one application menu
  * info for Debian and NetBSD users
  * SourceView editor settings:
     - tab width
     - usinng spaces intead of tabs
     - 80 chars length line visualization
     - periodic saving file

Version 1.0.2 - 19.07.2016 17:39

  * Formiko Vim entry point

Version 1.0.1 - 14.07.2016 09:08

  * New 1.0.1 release
  * Adding ChangeLog file
  * fix vim editing on empty line at and of file
  * fix file path when application server is running

Version 1.0.0 - 12.07.2016 08:24
  * stable version 1.0.0
  * right source distribution
  * desktop integration
  * litle bit fixies
  * application icon from petr simcik
  * final clean code
  * Small fixies from TODO:
  * html preview mode
  * clean text and new version
  * file type detection
  * working MarkDown support with gui
  * user preferences
  * modern Gtk+3 appearance (Menu)
  * opening file for sourceview editor
  * sourceview reading from and saving to files
  * base sourceview version
  * separating code to modules
  * preview mode
  * using Gtk.Application instead of GObject.GObject
  * full working
  * python3 support
  * crashing tread does crash gtk
  * using Gtk+3