@@ -7,6 +7,7 @@ Version 1.3.dev1
   * fix window cache settings
   * fix SIGSEGV - gui threads conflict
   * min size of editor and preview when both widgets are visible
+  * display white chars switch
 
 Version 1.2.0 - 26.10.2017 19:40
 
